--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
+    <title>Polkadot Mempool Explorer</title>
     <link
       rel="icon"
       href="%PUBLIC_URL%/favicon/favicon-32.png"
@@ -62,7 +63,7 @@
     />
     <meta
       name="description"
-      content="Conditional Tokens Explorer And Factory"
+      content="Polkadot Mempool Explorer"
     />
     <link
       rel="apple-touch-icon"
@@ -72,7 +73,14 @@
       rel="manifest"
       href="%PUBLIC_URL%/manifest.json"
     />
-    <title>Polkadot Mempool Explorer</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    >
     <style>
       body,
       html {
